--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,81 @@
-#TME
+* {
+	box-sizing: border-box;
+}
+body {
+	margin: 0;
+	padding: 0;
+}
+.clear {
+	clear: both;
+}
+header {
+	width: 100%;
+	padding: 20px 10%;
+	color: yellow;
+	background-color: skyblue;
+	text-align: center;
+}
+header img {
+	float: left;
+	width: 10%;
+	max-width: 50px;
+
+}
+header ul {
+	float: left;
+	width: 90%;
+	text-align: right;
+}
+header ul li {
+	display: inline-block;
+	list-style-type: none;
+	margin-left: 20px;
+	font-size: 14px;
+}
+
+.images-wrap {
+	width:50%;
+	float: left;
+	padding: 0 5%;
+}
+
+.images-wrap p {
+	background-color: blue; 
+}
+
+.menu-wrap {
+	width:50%;
+	float: left;
+	padding: 0 5%;
+	background-color: orange;
+}
+
+img {
+	width: 100%;
+}
+
+p {
+	width: 100%;
+	
+	padding: 5px 20%; 
+
+}
+
+body {
+	background-color: tan;
+}
+h1 {
+	color: skyblue;
+}
+
+footer, p {
+	text-align: center;
+}
+
+
+
+
+
+
+
+
